--- a/notebooks/DQN Atari with PyTorch.ipynb
+++ b/notebooks/DQN Atari with PyTorch.ipynb
@@ -42,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2018-08-10 18:44:21,110] Making new env: SpaceInvaders-v0\n"
+      "[2018-08-31 16:51:33,292] Making new env: SpaceInvaders-v0\n"
      ]
     },
     {
@@ -143,34 +143,40 @@
     "        #self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=5, stride=1)\n",
     "        #self.bn1 = nn.BatchNorm2d(16)\n",
     "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=32, kernel_size=8, stride=4)\n",
-    "        self.bn1 = nn.BatchNorm2d(32)\n",
+    "        #self.bn1 = nn.BatchNorm2d(32)\n",
     "        \n",
     "        #self.maxpool1 = nn.MaxPool2d(kernel_size=2)\n",
     "        \n",
     "        #self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=5, stride=1)\n",
     "        #self.bn2 = nn.BatchNorm2d(32)\n",
     "        self.conv2 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=4, stride=2)\n",
-    "        self.bn2 = nn.BatchNorm2d(64)\n",
+    "        #self.bn2 = nn.BatchNorm2d(64)\n",
     "        \n",
     "        #self.maxpool2 = nn.MaxPool2d(kernel_size=2)\n",
     "            \n",
     "        #self.conv3 = nn.Conv2d(in_channels=32, out_channels=32, kernel_size=5, stride=1)\n",
     "        #self.bn3 = nn.BatchNorm2d(32)\n",
     "        self.conv3 = nn.Conv2d(in_channels=64, out_channels=64, kernel_size=3, stride=1)\n",
-    "        self.bn3 = nn.BatchNorm2d(64)\n",
+    "        #self.bn3 = nn.BatchNorm2d(64)\n",
     "        \n",
     "        #self.head = nn.Linear(47520, 6)\n",
     "        #self.head = nn.Linear(34848, 6)  # with maxpool1 and 2\n",
     "        #self.fc = nn.Linear(700928, 6)\n",
-    "        self.fc = nn.Linear(16384, 6)\n",
+    "        #self.fc = nn.Linear(16384, 6)\n",
+    "        self.fc1 = nn.Linear(in_features=16384, out_features=512)\n",
+    "        self.fc2 = nn.Linear(in_features=512, out_features=6)  # out_features should be parametrized to env.action_space\n",
+    "        \n",
+    "        self.relu = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = F.relu(self.bn1(self.conv1(x)))\n",
+    "        x = self.relu(self.conv1(x))\n",
     "        #x = self.maxpool1(x)\n",
-    "        x = F.relu(self.bn2(self.conv2(x)))\n",
+    "        x = self.relu(self.conv2(x))\n",
     "        #x = self.maxpool2(x)\n",
-    "        x = F.relu(self.bn3(self.conv3(x)))\n",
-    "        x = self.fc(x.view(x.size(0), -1))\n",
+    "        x = self.relu(self.conv3(x))\n",
+    "        x = self.fc1(x.view(x.size(0), -1))\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc2(x)\n",
     "        return x"
    ]
   },
@@ -204,14 +210,15 @@
    "source": [
     "BATCH_SIZE = 32\n",
     "GAMMA = 0.99\n",
-    "EPS_START = 0.9\n",
-    "EPS_END = 0.05\n",
-    "EPS_DECAY = 200\n",
+    "EPS_START = 1.0\n",
+    "EPS_END = 0.1\n",
+    "EPS_DECAY = 1000000\n",
     "TARGET_UPDATE = 10000\n",
     "LR = 0.00025\n",
     "\n",
     "policy_net = DQN().to(device)\n",
     "target_net = DQN().to(device)\n",
+    "policy_net.load_state_dict(torch.load('invaders_policy.pt'))\n",
     "target_net.load_state_dict(policy_net.state_dict())\n",
     "target_net.eval()\n",
     "\n",
@@ -231,10 +238,11 @@
     "    global steps_done\n",
     "    sample = random.random()\n",
     "    eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY)\n",
+    "    #print(\"eps_threshold is {}\".format(eps_threshold))\n",
     "    steps_done += 1\n",
     "    if sample > eps_threshold:\n",
     "        with torch.no_grad():\n",
-    "            a = policy_net(state)\n",
+    "            #a = policy_net(state)\n",
     "            # a looks like this: tensor([[ 0.5946,  0.0787,  0.4172,  0.4470, -0.3384,  0.0064]], device='cuda:0')\n",
     "            return policy_net(state).max(1)[1]\n",
     "    else:\n",
@@ -346,11 +354,37 @@
      "output_type": "stream",
      "text": [
       "0 epochs has finished\n",
-      "Got reward tensor([ 50.], device='cuda:0')\n",
+      "Got reward tensor([ 120.], device='cuda:0')\n",
       "10 epochs has finished\n",
-      "Got reward tensor([ 180.], device='cuda:0')\n",
+      "Got reward tensor([ 105.], device='cuda:0')\n",
       "20 epochs has finished\n",
-      "Got reward tensor([ 55.], device='cuda:0')\n"
+      "Got reward tensor([ 140.], device='cuda:0')\n",
+      "30 epochs has finished\n",
+      "Got reward tensor([ 210.], device='cuda:0')\n",
+      "40 epochs has finished\n",
+      "Got reward tensor([ 440.], device='cuda:0')\n",
+      "50 epochs has finished\n",
+      "Got reward tensor([ 110.], device='cuda:0')\n",
+      "60 epochs has finished\n",
+      "Got reward tensor([ 90.], device='cuda:0')\n",
+      "70 epochs has finished\n",
+      "Got reward tensor([ 155.], device='cuda:0')\n",
+      "80 epochs has finished\n",
+      "Got reward tensor([ 30.], device='cuda:0')\n",
+      "90 epochs has finished\n",
+      "Got reward tensor([ 545.], device='cuda:0')\n",
+      "100 epochs has finished\n",
+      "Got reward tensor([ 100.], device='cuda:0')\n",
+      "110 epochs has finished\n",
+      "Got reward tensor([ 105.], device='cuda:0')\n",
+      "120 epochs has finished\n",
+      "Got reward tensor([ 90.], device='cuda:0')\n",
+      "130 epochs has finished\n",
+      "Got reward tensor([ 210.], device='cuda:0')\n",
+      "140 epochs has finished\n",
+      "Got reward tensor([ 250.], device='cuda:0')\n",
+      "150 epochs has finished\n",
+      "Got reward tensor([ 140.], device='cuda:0')\n"
      ]
     }
    ],
@@ -371,10 +405,12 @@
     "        total_reward += reward\n",
     "        next_state = get_screen()\n",
     "        next_state = trim_screen(next_state)\n",
+    "        #print(\"S:{} A:{} S':{} R:{}\".format(state, action.item(), next_state, reward))\n",
     "        memory.push(state, action.item(), next_state, reward)\n",
     "        \n",
     "        optimize_model()\n",
-    "        \n",
+    "      \n",
+    "    #steps_done = 0\n",
     "    if (i % 10 == 0):\n",
     "        print(\"{} epochs has finished\".format(i))\n",
     "        print(\"Got reward {}\".format(total_reward))"
@@ -386,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(policy_net.state_dict(), \"./pong_policy.pt\")"
+    "torch.save(policy_net.state_dict(), \"./invaders_policy.pt\")"
    ]
   },
   {
