Updated DL from scratch2

--- a/notebooks/DL from scratch2.ipynb
+++ b/notebooks/DL from scratch2.ipynb
@@ -329,6 +329,209 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chap. 5 RNN\n",
+    "\n",
+    "合わせて [Deep Learnng Book](http://www.deeplearningbook.org/contents/rnn.html) も。\n",
+    "\n",
+    "##### 言語モデル\n",
+    "単語の並びに対して確率を与える。「それがどれだけ起こり得るのか（それがどれだけ自然な単語の並びであるのか）」という事を確率で評価する。\n",
+    "\n",
+    "### RNN とは\n",
+    "\n",
+    "順伝播は以下の式で表される。\n",
+    "\n",
+    "$h_t = tanh(h_{t-1}W_h + x_tW_x + b)$\n",
+    "\n",
+    "実装は RNN クラスを参照。改めて見てみると、言ってしまえばただこれだけの事。\n",
+    "\n",
+    "\n",
+    "「RNNは、コンテキストがどれだけ長くても、そのコンテキストの情報を記憶するメカニズムを持つ」というのは、前のステップからの入力 $h_(t-1)$ にそれまでのコンテキストが含まれたマルコフ性の事をこう言っているのかな。\n",
+    "\n",
+    "RNNを図示する際、ループ構造を展開して、各時刻$t$を一つ一つのレイヤーとみなす表記が一般的に使われる。\n",
+    "\n",
+    "##### Backpropagation Through Time (BPTT)\n",
+    "「時間方向に展開したニューラルネットワークの誤差逆伝播法」\n",
+    "\n",
+    "※時系列データの時間サイズが大きくなるに比例して、BPTTで消費するコンピュータの計算リソースが増加する事と、逆伝播時の勾配が不安定になる事が問題になるため、（逆伝播時の）ネットワークのつながりを適当な長さで断ち切り、小さなネットワークを複数作るというアイデア、Truncated BPTT が実用ではよく行われる。なお、正しくは、ネットワークの「逆伝播」のつながりだけを断ち切る事になる。順伝播のつながりは維持したまま、逆伝播のつながりは適当な長さで断ち切り、その切り取られたネットワーク単位で学習を行う。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RNN:\n",
+    "    def __init__(self, Wx, Wh, b):\n",
+    "        self.params = [Wx, Wh, b]\n",
+    "        self.grads = [np.zeros_like(Wx), np.zeros_like(Wh), np.zeros_like(b)]\n",
+    "        self.cache = None\n",
+    "        \n",
+    "    def forward(self, x, h_prev):\n",
+    "        Wx, Wh, b = self.params\n",
+    "        t = np.dot(h_prev, Wh) + np.dot(x, Wx) + b\n",
+    "        h_next = np.tanh(t)\n",
+    "        \n",
+    "        self.cache = (x, h_prev, h_next)\n",
+    "        return h_next\n",
+    "    \n",
+    "    def backward(self, dh_next):\n",
+    "        Wx, Wh, b = self.params\n",
+    "        x, h_prev, h_next = self.cache\n",
+    "        \n",
+    "        dt = dh_next * (1 - h_next ** 2)\n",
+    "        db = np.sum(dt, axis=0)\n",
+    "        dWh = np.dot(h_prev.T, dt)\n",
+    "        dh_prev = np.dot(dt, Wh.T)\n",
+    "        dWx = np.dot(x.T, dt)\n",
+    "        dx = np.dot(dt, Wx.T)\n",
+    "        \n",
+    "        self.grads[0][...] = dWx\n",
+    "        self.grads[1][...] = dWh\n",
+    "        self.grads[2][...] = db\n",
+    "        \n",
+    "        return dx, dh_prev"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "再掲：順伝播は以下の式で表される。\n",
+    "\n",
+    "$h_t = tanh(h_{t-1}W_h + x_tW_x + b)$\n",
+    "\n",
+    "実装は RNN クラスを参照。改めて見てみると、言ってしまえばただこれだけの事。\n",
+    "\n",
+    "```python\n",
+    "t = np.dot(h_prev, Wh) + np.dot(x, Wx) + b\n",
+    "h_next = np.tanh(t)\n",
+    "```\n",
+    "\n",
+    "これを連ねるだけ。また、cacheは逆伝播の計算時に使用する中間データを保持するための変数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TimeRNN:\n",
+    "    def __init__(self, Wx, Wh, b, stateful=False):\n",
+    "        self.params = [Wx, Wh, b]\n",
+    "        self.grads = [np.zeros_like(Wx), np.zeros_like(Wh), np.zeros_like(b)]\n",
+    "        self.layers = None\n",
+    "        \n",
+    "        self.h, self.dh = None, None\n",
+    "        self.stateful = stateful\n",
+    "        \n",
+    "    def set_state(self, h):\n",
+    "        self.h = h\n",
+    "        \n",
+    "    def reset_state(self):\n",
+    "        self.h = None\n",
+    "        \n",
+    "    def forward(self, xs):\n",
+    "        \"\"\"\n",
+    "        入力xsを受け取る。xsは、T個文の時系列データを一つにまとめたもの。\n",
+    "        N: バッチサイズ\n",
+    "        T: タイムステップ数\n",
+    "        D: 入力ベクトルの次元数\n",
+    "        H: 隠れ層の次元数\n",
+    "        \n",
+    "        self.h = layer.forward(xs[:, t, :], self.h) については、p.194参照\n",
+    "        各バッチの t から T+t 番目のデータを用いているという事か\n",
+    "        \"\"\"\n",
+    "        Wx, Wh, b = self.params\n",
+    "        N, T, D = xs.shape\n",
+    "        D, H = Wx.shape\n",
+    "        \n",
+    "        self.layers = []\n",
+    "        hs = np.empty((N, T, H), dtype='f')\n",
+    "        \n",
+    "        if not self.stateful or self.h is None:\n",
+    "            self.h = np.zeros((N, H), dtype='f')\n",
+    "            \n",
+    "        for t in range(T):\n",
+    "            layer = RNN(*self.params)\n",
+    "            self.h = layer.forward(xs[:, t, :], self.h)\n",
+    "            hs[:, t, :] = self.h\n",
+    "            self.layers.append(layer)\n",
+    "            \n",
+    "        return hs\n",
+    "    \n",
+    "    def backward(self, dhs):\n",
+    "        Wx, Wh, b = self.params\n",
+    "        N, T, H = dhs.shape\n",
+    "        D, H = Wx.shape\n",
+    "        \n",
+    "        dxs = np.empty((N, T, D), dtype='f')\n",
+    "        dh = 0\n",
+    "        grads = [0, 0, 0]\n",
+    "        for t in reversed(range(T)):\n",
+    "            layer = self.layers[t]\n",
+    "            dx, dh = layer.backward(dhs[:, t, :] + dh)\n",
+    "            dxs[:, t, :] = dx\n",
+    "            \n",
+    "            for i, grad in enumerate(layer.grads):\n",
+    "                grads[i] += grad\n",
+    "                \n",
+    "        for i, grad in enumerate(grads):\n",
+    "            self.grads[i][...] = grad\n",
+    "        self.dh = dh\n",
+    "        \n",
+    "        return dxs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chap. 8 Attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.83034869 -0.0663667   0.70128839 -0.85694723]\n",
+      " [ 0.07172487 -0.05830517 -0.0373014   0.09220855]\n",
+      " [-0.03556187  0.01010812 -0.03337136 -0.07391818]\n",
+      " [-0.04115198 -0.03137931  0.01341287  0.04080555]\n",
+      " [ 0.01333651  0.03626031 -0.02652983  0.00663019]]\n",
+      "====== SUM =====\n",
+      "[ 0.83869621 -0.10968275  0.61749866 -0.79122112]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "T, H = 5, 4\n",
+    "hs = np.random.randn(T, H)\n",
+    "#print(hs)\n",
+    "a = np.array([0.8, 0.1, 0.03, 0.05, 0.02])\n",
+    "\n",
+    "ar = a.reshape(5, 1).repeat(4, axis=1)\n",
+    "#print(ar)\n",
+    "\n",
+    "t = hs*ar\n",
+    "print(t)\n",
+    "c = np.sum(t, axis=0)\n",
+    "print(\"====== SUM =====\")\n",
+    "print(c)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
